[package]
name = "bitcask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.3"
crossbeam-skiplist = "0.1"
crossbeam-channel = "0.5"
bytes = "1"
log = "0.4.21"
bincode = "1.3"
anyhow = "1.0.86"
crc32fast = "1.3.2"
fs4 = "0.8.1"
